--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <body>
 
     <header>
-        <img src="https://github.com/grandson17/lunch-orders/blob/main/Nairobidishes.png" alt="Logo" class="logo">
+        <img src="Nairobidishes.png" alt="Logo" class="logo">
         <div class="header-text">
             <h1>Nairobi Packed Dishes</h1>
             <div class="motto">Affordable. Healthy. Microwavable</div>
